--- a/README.rdoc
+++ b/README.rdoc
@@ -23,6 +23,7 @@ Things you may want to cover:
 
 * ...
 
+Testing ops chore branch
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
