--- a/README.rdoc
+++ b/README.rdoc
@@ -27,3 +27,5 @@ Testing ops chore branch
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+- Nothing
